--- a/src/styles/base/_medias.scss
+++ b/src/styles/base/_medias.scss
@@ -37,6 +37,12 @@
         transition: background-color 0.2s;
         width: 100%;
 
+        &:before {
+          content: "";
+          width: 0;
+          margin-left: 0;
+        }
+
         &:hover {
           background-color: var(--black);
           transition: background-color 0.3s;
