--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -32,6 +32,7 @@ a {
 
 ul {
   list-style: none;
+  margin: 8px 0 0 0;
   padding-left: 20px;
 
   li:before {
@@ -60,7 +61,7 @@ mat-card {
     }
 
     .star-empty {
-      color: var(--gray);
+      color: var(--light-gray);
       pointer-events: none;
     }
   }
