--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,13 +11,13 @@
 </nav>
 
 <mat-menu #menu="matMenu">
-  <button
+  <!-- <button
     mat-menu-item
     (click)="scrollToId('profile', -68)"
     [ngClass]="{ active: sectionInView === 'profile' }"
   >
     <span>Profile</span>
-  </button>
+  </button> -->
   <button
     mat-menu-item
     (click)="scrollToId('skills', -68)"
@@ -103,14 +103,14 @@
 
 <nav class="desktop" [ngClass]="{ fixed: isPastOneHundredViewHeight }">
   <ul>
-    <li
+    <!-- <li
       (click)="scrollToId('profile', -20)"
       [ngClass]="{ active: sectionInView === 'profile' }"
       wmAnimate="fadeInRight"
       aos
     >
       Profile
-    </li>
+    </li> -->
     <li
       (click)="scrollToId('skills', -20)"
       [ngClass]="{ active: sectionInView === 'skills' }"
@@ -171,15 +171,15 @@
   </section>
   <!-- #header -->
 
-  <section
+  <!-- <section
     id="profile"
     spyTarget="profile"
     wmAnimate="fadeInDown"
     aos
     delay="500ms"
   >
-    <mat-card>
-      <app-section-header
+    <mat-card> -->
+  <!-- <app-section-header
         [title]="'Profile'"
         [titleBlurb]="'About Me And My Passions'"
       ></app-section-header>
@@ -212,10 +212,10 @@
             </div>
           </div>
         </div>
-      </div>
-      <!-- .content -->
-    </mat-card>
-  </section>
+      </div> -->
+  <!-- .content -->
+  <!-- </mat-card>
+  </section> -->
   <!-- #profile -->
 
   <section id="skills" spyTarget="skills" wmAnimate="fadeInDown" aos>
@@ -441,45 +441,57 @@
         [titleBlurb]="'Formal Training'"
       ></app-section-header>
       <div class="content">
-        <div class="sub-section">
-          <div class="sub-section-header">
-            <span
-              ><h2>
-                <a href="https://www.udacity.com" target="_blank">Udacity</a>
-              </h2></span
-            >
-            <span>June 2019 to October 2019</span>
-          </div>
-          <!-- .sub-section-header -->
-          <h4>Mobile Web Specialist, Nanodegree</h4>
-          <ul>
-            <li>Dynamic & Offline Capable Web Apps</li>
-            <li>Performant Web Apps</li>
-            <li>Web Accessibility</li>
-          </ul>
-        </div>
-        <!-- .sub-section -->
-        <div class="sub-section">
-          <div class="sub-section-header">
-            <span
-              ><h2>
-                <a href="https://www.blackhawk.edu" target="_blank"
-                  >Blackhawk Technical College</a
+        <div class="row">
+          <div class="col-6">
+            <div class="sub-section">
+              <div class="sub-section-header">
+                <span
+                  ><h2>
+                    <a href="https://www.udacity.com" target="_blank"
+                      >Udacity</a
+                    >
+                  </h2></span
                 >
-              </h2></span
-            >
-            <span>Graduated May 2014</span>
+                <span>June 2019 to October 2019</span>
+              </div>
+              <!-- .sub-section-header -->
+              <h4>Mobile Web Specialist, Nanodegree</h4>
+              <ul>
+                <li>Dynamic & Offline Capable Web Apps</li>
+                <li>Performant Web Apps</li>
+                <li>Web Accessibility</li>
+              </ul>
+            </div>
+            <!-- .sub-section -->
           </div>
-          <!-- .sub-section-header -->
-          <h4 class="no-margin">
-            Associate of Applied Science - IT-Web Analyst/Programmer
-          </h4>
-          <h4>GPA: 3.76/4.0</h4>
-          <ul>
-            <li *ngFor="let course of blackhawkCourses">{{ course }}</li>
-          </ul>
+          <!-- .col -->
+          <div class="col-6">
+            <div class="sub-section">
+              <div class="sub-section-header">
+                <span
+                  ><h2>
+                    <a href="https://www.blackhawk.edu" target="_blank"
+                      >Blackhawk Technical College</a
+                    >
+                  </h2></span
+                >
+                <span>Graduated May 2014</span>
+              </div>
+              <!-- .sub-section-header -->
+              <div class="justify-content-space-between">
+                <h4>
+                  Associate of Applied Science - IT-Web Analyst/Programmer
+                </h4>
+                <h4>GPA: 3.76/4.0</h4>
+              </div>
+              <ul>
+                <li *ngFor="let course of blackhawkCourses">{{ course }}</li>
+              </ul>
+            </div>
+            <!-- .sub-section -->
+          </div>
+          <!-- .col -->
         </div>
-        <!-- .sub-section -->
       </div>
       <!-- .content -->
     </mat-card>
