Update bootstrap cols

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -170,14 +170,14 @@
           <!-- .row -->
           <div class="row">
             <div
-              class="col-xs-12 col-sm-6 col-md-4"
+              class="col-sm-12 col-md-6 col-lg-4"
               *ngFor="let skill of frontEndSkills"
             >
               <div class="row">
-                <div class="col-xs-6 col-sm-3">
+                <div class="col-6 col-md-3">
                   {{ skill.label }}
                 </div>
-                <div class="col-xs-6 col-sm-9">
+                <div class="col-6 col-md-9">
                   <mat-icon
                     class="star"
                     *ngFor="let item of [].constructor(skill.rating)"
@@ -203,14 +203,14 @@
           <!-- .row -->
           <div class="row">
             <div
-              class="col-xs-12 col-sm-6 col-md-4"
+              class="col-sm-12 col-md-6 col-lg-4"
               *ngFor="let skill of librarySkills"
             >
               <div class="row">
-                <div class="col-xs-6 col-sm-3">
+                <div class="col-6 col-md-3">
                   {{ skill.label }}
                 </div>
-                <div class="col-xs-6 col-sm-9">
+                <div class="col-6 col-md-9">
                   <mat-icon
                     class="star"
                     *ngFor="let item of [].constructor(skill.rating)"
@@ -236,14 +236,14 @@
           <!-- .row -->
           <div class="row">
             <div
-              class="col-xs-12 col-sm-6 col-md-4"
+              class="col-sm-12 col-md-6 col-lg-4"
               *ngFor="let skill of miscSkills"
             >
               <div class="row">
-                <div class="col-xs-6 col-sm-3">
+                <div class="col-6 col-md-3">
                   {{ skill.label }}
                 </div>
-                <div class="col-xs-6 col-sm-9">
+                <div class="col-6 col-md-9">
                   <mat-icon
                     class="star"
                     *ngFor="let item of [].constructor(skill.rating)"
