Update projects section content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -274,7 +274,7 @@
         [titleBlurb]="'Web Apps I\'ve worked on'"
       ></app-section-header>
       <div class="content">
-        <div class="sub-section large-sub-section">
+        <div class="sub-section">
           <h2>
             <a
               href="https://bull-search-web-dev.azurewebsites.net"
@@ -282,148 +282,169 @@
               >Bull Search Web</a
             >
           </h2>
-          <p>
-            Bull Search Web is an ongoing project and as such, is in a
-            development environment. It's an
-            <a href="https://angular.io" target="_blank">Angular</a> 9
-            application using
-            <a href="https://ngrx.io" target="_blank">NgRx</a>. The UI and UX
-            was designed by
-            <a href="https://centricconsulting.com/" target="_blank"
-              >Centric Consulting</a
-            >, who I highly recommend. I had the pleasure of collaborating with
-            <a href="https://www.linkedin.com/in/timzeller" target="_blank"
-              >Tim Zeller</a
-            >
-            and
-            <a
-              href="https://www.linkedin.com/in/raysa-suarez-61ba47122"
-              target="_blank"
-              >Raysa Suarez</a
-            >
-            during feedback sessions. Ultimately, I created a one-to-one
-            implementation of the UI, UX, and functionality using a mobile first
-            strategy.
-          </p>
-          <div class="screenshots">
-            <img
-              src="../assets/images/screenshots/bull-search-web.webp"
-              alt="Bull Search Web - Desktop"
-              class="projects-thumbnail"
-            />
-            <img
-              src="../assets/images/screenshots/bull-search-web-mobile.webp"
-              alt="Bull Search Web - Mobile"
-              class="projects-thumbnail"
-            />
+          <div class="row">
+            <div class="col-4">
+              Bull Search Web is an ongoing project and as such, is in a
+              development environment. It's an
+              <a href="https://angular.io" target="_blank">Angular</a> 9
+              application using
+              <a href="https://ngrx.io" target="_blank">NgRx</a>. The UI and UX
+              was designed by
+              <a href="https://centricconsulting.com/" target="_blank"
+                >Centric Consulting</a
+              >, who I highly recommend. I had the pleasure of collaborating
+              with
+              <a href="https://www.linkedin.com/in/timzeller" target="_blank"
+                >Tim Zeller</a
+              >
+              and
+              <a
+                href="https://www.linkedin.com/in/raysa-suarez-61ba47122"
+                target="_blank"
+                >Raysa Suarez</a
+              >
+              during feedback sessions. Ultimately, I created a one-to-one
+              implementation of the UI, UX, and functionality using a mobile
+              first strategy.
+            </div>
+            <!-- .col -->
+            <div class="col-8">
+              <div class="screenshots">
+                <img
+                  src="../assets/images/screenshots/bull-search-web.webp"
+                  alt="Bull Search Web - Desktop"
+                  class="projects-thumbnail"
+                />
+                <img
+                  src="../assets/images/screenshots/bull-search-web-mobile.webp"
+                  alt="Bull Search Web - Mobile"
+                  class="projects-thumbnail"
+                />
+              </div>
+              <!-- .screenshots -->
+            </div>
+            <!-- .col -->
           </div>
-          <!-- .screenshots -->
+          <!-- .row -->
         </div>
         <!-- .sub-section -->
-        <div class="sub-section large-sub-section">
+        <div class="sub-section">
           <h2>
             <a href="http://www.accelgen.com" target="_blank"
-              >Accelerated Genetics</a
+              >Accelerated Genetics - Corporate</a
             >
           </h2>
-          <p>
-            I inherited this website when I joined Accelerated Genetics, about
-            five years ago, and I was given the task of redesigning the UI/UX,
-            architecture, and SEO. I also closed security holes such as
-            SQL-injection and improved query performance.
-          </p>
-          <div class="screenshots">
-            <img
-              src="../assets/images/screenshots/accelerated-genetics-mobile.webp"
-              alt="Bull Search Web - Desktop"
-              class="projects-thumbnail"
-            />
-            <img
-              src="../assets/images/screenshots/accelerated-genetics-about.webp"
-              alt="Bull Search Web - Desktop"
-              class="projects-thumbnail"
-            />
-            <img
-              src="../assets/images/screenshots/accelerated-genetics-about-mobile.webp"
-              alt="Bull Search Web - Desktop"
-              class="projects-thumbnail"
-            />
+          <div class="row">
+            <div class="col-4">
+              I inherited this website when I joined Accelerated Genetics, about
+              five years ago, and I was given the task of redesigning the UI/UX,
+              architecture, and SEO. I also closed security holes such as
+              SQL-injection and improved query performance.
+            </div>
+            <!-- .col -->
+            <div class="col-8">
+              <div class="screenshots">
+                <img
+                  src="../assets/images/screenshots/accelerated-genetics-about.webp"
+                  alt="Bull Search Web - Desktop"
+                  class="projects-thumbnail"
+                />
+                <img
+                  src="../assets/images/screenshots/accelerated-genetics-about-mobile.webp"
+                  alt="Bull Search Web - Desktop"
+                  class="projects-thumbnail"
+                />
+              </div>
+              <!-- .screenshots -->
+            </div>
+            <!-- .col -->
           </div>
-          <!-- .screenshots -->
+          <!-- .row -->
         </div>
         <!-- .sub-section -->
-        <div class="sub-section large-sub-section">
-          <h2>
-            <a href="https://shop.accelgen.com" target="_blank"
-              >Accelerated Genetics - Shop</a
-            >
-          </h2>
-          <p>
-            This is an ecommerce website where I was tasked to design and
-            heavily draw inspiration from Select Sires Beef. I created and
-            implemented all functionality, including connecting to the WindRiver
-            API for credit card processing. Feel free to create an account,
-            otherwise for your convenience, you can use:
-          </p>
-          <div class="screenshots">
-            <img
-              src="../assets/images/screenshots/shop-login.webp"
-              alt="Bull Search Web - Desktop"
-              class="projects-thumbnail"
-            />
-            <img
-              src="../assets/images/screenshots/shop-review.webp"
-              alt="Bull Search Web - Mobile"
-              class="projects-thumbnail"
-            />
-          </div>
-          <!-- .screenshots -->
-        </div>
-        <!-- .sub-section -->
-        <div class="sub-section large-sub-section">
+        <div class="sub-section">
           <h2>
             <a href="http://search.accelgen.com" target="_blank"
               >Accelerated Genetics - Sire Search</a
             >
           </h2>
-          <p>
-            I created this Angular project, designed and implemented its UI/UX
-            for mobile and desktop, setup the state management using Redux. The
-            logging is on, even though it's in production, which can be reviewed
-            real time in Chrome Developer Tools console tab when you click on
-            any UI action element (such as when you click on a check box or add
-            or update a filter).
-          </p>
-          <div class="screenshots">
-            <img
-              src="../assets/images/screenshots/ag-search.webp"
-              alt="Bull Search Web - Desktop"
-              class="projects-thumbnail"
-            />
-            <img
-              src="../assets/images/screenshots/ag-search-mobile.webp"
-              alt="Bull Search Web - Mobile"
-              class="projects-thumbnail"
-            />
+          <div class="row">
+            <div class="col-4">
+              I created this Angular project, designed and implemented its UI
+              and UX, and setup the Redux state management.
+            </div>
+            <!-- .col -->
+            <div class="col-8">
+              <div class="screenshots">
+                <img
+                  src="../assets/images/screenshots/ag-search.webp"
+                  alt="Bull Search Web - Desktop"
+                  class="projects-thumbnail"
+                />
+                <img
+                  src="../assets/images/screenshots/ag-search-mobile.webp"
+                  alt="Bull Search Web - Mobile"
+                  class="projects-thumbnail"
+                />
+              </div>
+              <!-- .screenshots -->
+            </div>
+            <!-- .col -->
           </div>
-          <!-- .screenshots -->
+          <!-- .row -->
         </div>
         <!-- .sub-section -->
-        <div class="sub-section large-sub-section">
+        <div class="sub-section">
+          <h2>
+            <a href="https://shop.accelgen.com" target="_blank"
+              >Accelerated Genetics - Shop</a
+            >
+          </h2>
+          <div class="row">
+            <div class="col-4">
+              This is an ecommerce website where I was tasked to design and
+              heavily draw inspiration from Select Sires Beef. I created and
+              implemented all functionality, including connecting to the
+              WindRiver API for credit card processing.
+            </div>
+            <!-- .col -->
+            <div class="col-8">
+              <div class="screenshots">
+                <img
+                  src="../assets/images/screenshots/shop-login.webp"
+                  alt="Bull Search Web - Desktop"
+                  class="projects-thumbnail"
+                />
+              </div>
+              <!-- .screenshots -->
+            </div>
+            <!-- .col -->
+          </div>
+          <!-- .row -->
+        </div>
+        <!-- .sub-section -->
+        <div class="sub-section">
           <h2>
             <a href="https://dss.selectsires.com/" target="_blank"
               >Select Sires - Dairy Sire Search</a
             >
           </h2>
-          <p>Blurb</p>
-          <div class="screenshots">
-            <img
-              src="../assets/images/screenshots/dairy-sire-selection.webp"
-              alt="Bull Search Web - Desktop"
-              class="projects-thumbnail"
-            />
+          <div class="row">
+            <div class="col-4">Blurb</div>
+            <!-- .col -->
+            <div class="col-8">
+              <div class="screenshots">
+                <img
+                  src="../assets/images/screenshots/dairy-sire-selection.webp"
+                  alt="Bull Search Web - Desktop"
+                  class="projects-thumbnail"
+                />
+              </div>
+              <!-- .screenshots -->
+            </div>
+            <!-- .col -->
           </div>
-          <!-- .screenshots -->
+          <!-- .row -->
         </div>
         <!-- .sub-section -->
       </div>
