Update project section's responsiveness

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -283,13 +283,13 @@
             >
           </h2>
           <div class="row">
-            <div class="col-4">
+            <div class="col-md-12 col-lg-4">
               Bull Search Web is an ongoing project and as such, is in a
               development environment. It's an
               <a href="https://angular.io" target="_blank">Angular</a> 9
               application using
-              <a href="https://ngrx.io" target="_blank">NgRx</a>. The UI and UX
-              was designed by
+              <a href="https://ngrx.io" target="_blank">NgRx</a> for state
+              management. The UI and UX was designed by
               <a href="https://centricconsulting.com/" target="_blank"
                 >Centric Consulting</a
               >, who I highly recommend. I had the pleasure of collaborating
@@ -308,20 +308,20 @@
               first strategy.
             </div>
             <!-- .col -->
-            <div class="col-8">
-              <div class="screenshots">
-                <img
-                  src="../assets/images/screenshots/bull-search-web.webp"
-                  alt="Bull Search Web - Desktop"
-                  class="projects-thumbnail"
-                />
-                <img
-                  src="../assets/images/screenshots/bull-search-web-mobile.webp"
-                  alt="Bull Search Web - Mobile"
-                  class="projects-thumbnail"
-                />
-              </div>
-              <!-- .screenshots -->
+            <div class="col-sm-12 col-md-8 col-lg-5 screenshot">
+              <img
+                src="../assets/images/screenshots/bull-search-web.webp"
+                alt="Bull Search Web - Desktop"
+                class="projects-thumbnail"
+              />
+            </div>
+            <!-- .col -->
+            <div class="col-sm-12 col-md-4 col-lg-3 screenshot">
+              <img
+                src="../assets/images/screenshots/bull-search-web-mobile.webp"
+                alt="Bull Search Web - Mobile"
+                class="projects-thumbnail"
+              />
             </div>
             <!-- .col -->
           </div>
@@ -331,31 +331,31 @@
         <div class="sub-section">
           <h2>
             <a href="http://www.accelgen.com" target="_blank"
-              >Accelerated Genetics - Corporate</a
+              >Accelerated Genetics</a
             >
           </h2>
           <div class="row">
-            <div class="col-4">
+            <div class="col-md-12 col-lg-4">
               I inherited this website when I joined Accelerated Genetics, about
               five years ago, and I was given the task of redesigning the UI/UX,
               architecture, and SEO. I also closed security holes such as
               SQL-injection and improved query performance.
             </div>
             <!-- .col -->
-            <div class="col-8">
-              <div class="screenshots">
-                <img
-                  src="../assets/images/screenshots/accelerated-genetics-about.webp"
-                  alt="Bull Search Web - Desktop"
-                  class="projects-thumbnail"
-                />
-                <img
-                  src="../assets/images/screenshots/accelerated-genetics-about-mobile.webp"
-                  alt="Bull Search Web - Desktop"
-                  class="projects-thumbnail"
-                />
-              </div>
-              <!-- .screenshots -->
+            <div class="col-sm-12 col-md-8 col-lg-5 screenshot">
+              <img
+                src="../assets/images/screenshots/accelerated-genetics-about.webp"
+                alt="Accelerated Genetics - Desktop"
+                class="projects-thumbnail"
+              />
+            </div>
+            <!-- .col -->
+            <div class="col-sm-12 col-md-4 col-lg-3 screenshot">
+              <img
+                src="../assets/images/screenshots/accelerated-genetics-about-mobile.webp"
+                alt="Accelerated Genetics - Desktop"
+                class="projects-thumbnail"
+              />
             </div>
             <!-- .col -->
           </div>
@@ -364,30 +364,28 @@
         <!-- .sub-section -->
         <div class="sub-section">
           <h2>
-            <a href="http://search.accelgen.com" target="_blank"
-              >Accelerated Genetics - Sire Search</a
-            >
+            <a href="http://search.accelgen.com" target="_blank">Sire Search</a>
           </h2>
           <div class="row">
-            <div class="col-4">
+            <div class="col-md-12 col-lg-4">
               I created this Angular project, designed and implemented its UI
               and UX, and setup the Redux state management.
             </div>
             <!-- .col -->
-            <div class="col-8">
-              <div class="screenshots">
-                <img
-                  src="../assets/images/screenshots/ag-search.webp"
-                  alt="Bull Search Web - Desktop"
-                  class="projects-thumbnail"
-                />
-                <img
-                  src="../assets/images/screenshots/ag-search-mobile.webp"
-                  alt="Bull Search Web - Mobile"
-                  class="projects-thumbnail"
-                />
-              </div>
-              <!-- .screenshots -->
+            <div class="col-sm-12 col-md-8 col-lg-5 screenshot">
+              <img
+                src="../assets/images/screenshots/ag-search.webp"
+                alt="Sire Search - Desktop"
+                class="projects-thumbnail"
+              />
+            </div>
+            <!-- .col -->
+            <div class="col-sm-12 col-md-4 col-lg-3 screenshot">
+              <img
+                src="../assets/images/screenshots/ag-search-mobile.webp"
+                alt="Sire Search - Mobile"
+                class="projects-thumbnail"
+              />
             </div>
             <!-- .col -->
           </div>
@@ -396,27 +394,22 @@
         <!-- .sub-section -->
         <div class="sub-section">
           <h2>
-            <a href="https://shop.accelgen.com" target="_blank"
-              >Accelerated Genetics - Shop</a
-            >
+            <a href="https://shop.accelgen.com" target="_blank">Shop</a>
           </h2>
           <div class="row">
-            <div class="col-4">
+            <div class="col-md-12 col-lg-6">
               This is an ecommerce website where I was tasked to design and
               heavily draw inspiration from Select Sires Beef. I created and
               implemented all functionality, including connecting to the
               WindRiver API for credit card processing.
             </div>
             <!-- .col -->
-            <div class="col-8">
-              <div class="screenshots">
-                <img
-                  src="../assets/images/screenshots/shop-login.webp"
-                  alt="Bull Search Web - Desktop"
-                  class="projects-thumbnail"
-                />
-              </div>
-              <!-- .screenshots -->
+            <div class="col-md-12 col-lg-6 screenshot">
+              <img
+                src="../assets/images/screenshots/shop-login.webp"
+                alt="Shop, Accelerated Genetics - Desktop"
+                class="projects-thumbnail"
+              />
             </div>
             <!-- .col -->
           </div>
@@ -426,21 +419,18 @@
         <div class="sub-section">
           <h2>
             <a href="https://dss.selectsires.com/" target="_blank"
-              >Select Sires - Dairy Sire Search</a
+              >Dairy Sire Search</a
             >
           </h2>
           <div class="row">
-            <div class="col-4">Blurb</div>
+            <div class="col-md-12 col-lg-6">DSS Description</div>
             <!-- .col -->
-            <div class="col-8">
-              <div class="screenshots">
-                <img
-                  src="../assets/images/screenshots/dairy-sire-selection.webp"
-                  alt="Bull Search Web - Desktop"
-                  class="projects-thumbnail"
-                />
-              </div>
-              <!-- .screenshots -->
+            <div class="col-md-12 col-lg-6 screenshot">
+              <img
+                src="../assets/images/screenshots/dairy-sire-selection.webp"
+                alt="Dairy Sire Selection - Desktop"
+                class="projects-thumbnail"
+              />
             </div>
             <!-- .col -->
           </div>
