--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -134,13 +134,13 @@ nav.desktop {
   }
 }
 
-.screenshots {
-  display: flex;
-  justify-content: space-around;
+.screenshot {
+  text-align: center;
 
-  .projects-thumbnail {
+  img {
     border: 1px solid var(--off-white);
-    height: 300px;
+    margin-top: 15px;
+    max-height: 300px;
     width: auto;
   }
 }
