--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,5 @@
 @import "~@angular/material/theming";
-// @import "bootstrap/scss/_grid.scss";
-@import "~bootstrap/dist/css/bootstrap-grid.min";
+// @import "~bootstrap/dist/css/bootstrap-grid.min";
 
 @import "./base/colors";
 @import "./base/lib";
